# Coursework

./: README.md  pyproject.toml  sample.env
src/: main.py  output.json  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
